<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">piekno</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_main">piekno</string>
    <string name="title_activity_splash">Splash</string>
    <string name="btn_Back">back</string>
    <string name="btn_menu">menu</string>
    <string name="hint_id">아이디 입력</string>
    <string name="hint_pw">비밀번호</string>
    <string name="text_autologin">자동로그인</string>
    <string name="find_idpw">아이디/비밀번호 찾기</string>
	
    <color name="text_color">#5F4018</color>
    <color name="main_color">#6699FF</color>
    <color name="white">#FFFFFF</color>
    <color name="gray">#AAAAAA</color>
    <color name="statusbar">#6699FF</color>

    <string name="title_activity_board_list">BoardList</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_loading">LoadingActivity</string>

</resources>
