<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:background="@drawable/menu_top">
    
    <LinearLayout 
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:gravity="center"
        >
    <ImageButton 
        android:id="@+id/title_Btn_home"
        android:layout_width="32dp"
        android:layout_height="32dp"
      android:src="@drawable/menu_btn_home"
      android:contentDescription="@string/btn_Back"
      android:background="@null"
      android:scaleType="centerCrop"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/app_name"
        >
    		<ImageView 
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:src="@drawable/main_logo"
    		    android:scaleType="centerCrop"
    		    android:contentDescription="@string/app_name"
    		    />
    </LinearLayout>
    
    <ImageButton android:id="@+id/title_Btn_menu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="0dp"
        android:background="@null"
        android:src="@drawable/menu_btn_dropdown_up"
        android:contentDescription="@string/btn_menu"
        android:scaleType="centerCrop"/>
        
</RelativeLayout>